# openfixture

./: .gitignore  3d_model_component_checklist.md  DOUBLE_VERIFIED_3D_MODEL.md  GenFixture.py  LICENSE.md  MIGRATION_GUIDE.md  MODERNIZATION_SUMMARY.md  OpenFixtureDlg.py  POGO_PINS.md  PRE_PUSH_CHECKLIST.md  PROJECT_ANALYSIS_REPORT.md  README.md  SECURITY.md  SECURITY_REVIEW_SUMMARY.md  TEST_RUN_ANALYSIS.md  UNIT_VERIFICATION_REPORT.md  __init__.py  analyze_dxf.py.template  build.py  clean_and_deploy.ps1  copilot-instructions_kicad_plugin_structure.md  copilot-instructions_kicad_python_api.md  copilot-instructions_openfixture.md  deploy_to_repository.ps1  fixture_config.toml  fixture_z_axis_analysis.md  force_update.ps1  genfixture.bat  openfixture.code-workspace  openfixture.py  openfixture.scad  openfixture.stl  pyproject.toml  setup.py  sync_to_kicad.ps1  sync_to_kicad_config.ps1.template  test_functionality.ps1
.github/: copilot-instructions.md
.github/hooks/: pre-commit.json
.github/instructions/: scad-generation.instructions.md
.github/prompts/: deploy-fixture.prompt.md  test-board.prompt.md
src/: __init__.py  openfixture.py
src/openfixture_support/: GenFixture.py  __init__.py  fixture_config.toml  genfixture.bat  genfixture.sh  openfixture.scad
