[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "openfixture"
version = "1.0.0"
description = "Automated laser-cuttable PCB test fixture generation for KiCAD"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "CC-BY-SA-4.0"}
authors = [
    {name = "Roland Wa", email = "gitrepository Team"}
]
keywords = ["kicad", "pcb", "test-fixture", "laser-cutting", "eda"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: Creative Commons Attribution-ShareAlike 4.0",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

dependencies = []

[project.optional-dependencies]
toml = [
    "tomli>=1.2.0; python_version<'3.11'",
]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
]

[project.scripts]
genfixture = "openfixture_support.GenFixture:main"

[project.urls]
Homepage = "https://github.com/RolandWa/openfixture"
Documentation = "https://github.com/RolandWa/openfixture"
Repository = "https://github.com/RolandWa/openfixture"
Issues = "https://github.com/RolandWa/openfixture/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openfixture_support = ["*.scad", "*.dxf", "*.toml", "*.bat", "*.sh"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
